Tue Nov 13 19:50:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: do not override CC if set.

Tue Nov 13 17:25:44 2001  Usaku Nakamura <usa@ruby-lang.org>

	* hash.c (envix): merge from 1.7: use GET_ENVIRON and FREE_ENVIRON to
	  get environment variables list.

	* hash.c (env_keys): ditto.

	* hash.c (env_each_key): ditto.

	* hash.c (env_values): ditto.

	* hash.c (env_keys): ditto.

	* hash.c (env_each_value): ditto.

	* hash.c (env_each): ditto.

	* hash.c (env_inspect): ditto.

	* hash.c (env_to_a): ditto.

	* hash.c (env_size): ditto.

	* hash.c (env_empty_p): ditto.

	* hash.c (env_has_value): ditto.

	* hash.c (env_index): ditto.

	* hash.c (env_to_hash): ditto.

	* win32/win32.c (win32_getenv): merge from 1.7: use static buffer.

	* win32/win32.c, win32/win32.h (win32_get_environ): merge from 1.7:
	  get environment variables list.

	* win32/win32.c, win32/win32.h (win32_free_environ): merge from 1.7:
	  free environment variables list.

	* win32/Makefile.sub: merge from 1.7: add -DLIBRUBY_SO to CPPFLAGS.

Tue Nov 13 14:39:11 2001  WATANABE Tetsuya  <tetsu@jpn.hp.com>

	* signal.c (sighandle): should not re-register sighandler if
	  POSIX_SIGNAL is defined.

Mon Nov 12 16:48:48 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (error_print): errat array may be empty.

Sat Nov 10 00:14:24 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yylex): float '1_.0' should not be allowed.

	* variable.c (var_getter): should care about var as Qfalse
	  (ruby-bugs#PR199).

Fri Nov  9 13:52:18 2001  Usaku Nakamura <usa@ruby-lang.org>

	* win32/config.status.in: make CFLAGS same as Makefile's one.

Thu Nov  8 20:20:37 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_trap_eval): avoid annoying warning with signal.
	  [ruby-talk:23225]

	* eval.c (rb_call0): adjust caller source file/line while
	  evaluating optional arguments.

Thu Nov  8 18:41:58 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
