@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.5"
-#define RUBY_RELEASE_DATE "2001-11-13"
+#define RUBY_RELEASE_DATE "2001-11-18"
 #define RUBY_VERSION_CODE 165
-#define RUBY_RELEASE_CODE 20011113
+#define RUBY_RELEASE_CODE 20011118
